# clause-code

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
src/clause_code/: __init__.py  __main__.py  agent.py  cli.py  theme.py
src/clause_code/commands/: __init__.py  base.py  config.py
src/clause_code/utils/: __init__.py  config.py  file_writer.py
tests/: __init__.py  conftest.py  test_agent.py  test_commands.py  test_config.py  test_file_writer.py  test_theme.py
